[gd_scene load_steps=2 format=3 uid="uid://dccan5dvvoco"]

[ext_resource type="Script" path="res://ui/game_end_panel/GameEndPanel.gd" id="1_e2nfa"]

[node name="GameEndPanel" type="Node2D"]
script = ExtResource("1_e2nfa")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 384.0
offset_bottom = 256.0
color = Color(0.972549, 0.376471, 1, 0.909804)

[node name="WinnerLabel" type="Label" parent="."]
offset_left = 128.0
offset_top = 16.0
offset_right = 256.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 32
text = "P1 Wins!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 128.0
offset_top = 160.0
offset_right = 256.0
offset_bottom = 226.0

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "PLAY AGAIN"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"
